Wed Dec 22 10:53:03 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* parse.y (rb_id2str): intervm strings shall not be returned from
	  this function because they are not ready to be used directly.
	  Wrap them with a shared string.

Tue Dec 21 13:14:06 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm_core.h (rb_vm_struct): ref_count is no longer used; VMs
	  cannot live longer than their parent so a VM is now totally
	  handled by its parent.

Mon Dec 20 10:53:01 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* mvm.c: goodbye.

Mon Dec 20 07:15:59 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm_core.h (rb_vm_struct): they are no longer queues

	* thread.c: ditto.

	* vm.c: ditto.

Mon Dec 20 05:46:50 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (rb_vm_send): garbage code eliminated.  Checks are done in
	  the calling function.

	* intervm.c (rb_intervm_wormhole_send): the check.

Mon Dec 20 05:34:00 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (wormhole_init_copy): bug fix that, when source object
	  was from outer-space, rb_obj_init_copy() does not work.

Mon Dec 20 04:25:36 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c, vm_core.h, thread.c, intervm.c: rb_queue_t removed also,
	  now signal handlings are done using wormholes.

Mon Dec 20 02:47:38 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c, vm_core.h, thread.c: bytestream reverted.

Fri Dec 17 19:01:07 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* thread.c (rb_vm_terminate_all_really_everything): avoid waiting
	  the runnign thread itself.

Fri Dec 17 13:45:32 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* signal.c (ATOMIC_INC, ATOMIC_DEC): uses intervm.h definition.

Fri Dec 17 13:43:13 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (rb_intervm_wormhole_send): support for immediate values.

	* intervm.c (rb_intervm_wormhole_recv): ditto.

Fri Dec 17 13:10:50 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
