@@ -5,3 +5,13 @@ dln_load(const char *file)
 {
     rb_loaderror("this executable file can't load extension libraries");
 }
+
+void
+Init_dln(void)
+{
+}
+
+void
+InitVM_dln(void)
+{
+}
